fix: result heading clipping

--- a/poke-search-frontend/src/css/Result.scss
+++ b/poke-search-frontend/src/css/Result.scss
@@ -7,7 +7,6 @@
   h1 {
     display: inline-block;
     text-transform: capitalize;
-    line-height: 2rem;
   }
 
   strong {
